--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    background-origin: var(--yellow-2);
+    background-color: white;
     text-align: center;
 }
 .popcorn {
@@ -37,39 +37,40 @@ body {
 .card-container {
     margin: auto;
     width: 80%;
-    column-gap: 50px;
 }
 .card {
     text-align: left;
+    overflow: hidden;
     display: inline-block;
-    width: 700px;
-    height: 300px;
+    width: 40vw;
+    height: 360px;
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 20px;
-    padding: 10px;
+    line-height: 20px;
     background-color: var(--red-2);
     color: white;
     border-radius: 10px;
-
+    border-bottom: 5px solid var(--yellow-1);
 }
 .movie-card {
-    width: 90%;
+    width: 100%;
     height: 100%;
     display: flex;
-    column-gap: 30px;
+    column-gap: 20px;
     margin: auto;
 }
-.card img {
-    width: 25%;
-    height: auto;
+.movie-card img {
+    height: 100%;
+    width: 40%;
     margin: auto;
 }
 
 .content {
     display: inline-block;
-    width: 80%;
+    width: 70%;
     margin: auto;
+    margin-right: 10px;
 }
 .rating p {
     font-weight: 700;
@@ -88,4 +89,24 @@ body {
 .movie-desc {
     height: 100px;
     overflow: hidden;
+}
+.movie-title {
+    height: 60px;
+    overflow: hidden;
+}
+
+footer {
+    padding: 30px;
+    font-weight: 300;
+    font-size: 15px;
+}
+
+.red {
+    color: red;
+}
+.yellow {
+    color: yellow;
+}
+.green {
+    color: greenyellow;
 }
