--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 :root { 
-    --red-1 : #d62503;
-    --yellow-1 : #FFE812;
-    --orange-1 : #e96e0e;
-    --yellow-2 : #F3DC68;
-    --red-2 : #77030E; 
+    --brown-1: #633720;
+    --brown-2: #744529;
+    --yellow-1: #F6ECBB;
+    --yellow-2: #ECD574;
+    --yellow-3: #E0BD4D;
 }
 
 html {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     overflow-x: hidden;
 }
 
@@ -15,98 +15,194 @@ body {
     margin: 0;
     padding: 0;
     background-color: white;
-    text-align: center;
 }
-.popcorn {
-    margin: auto;
-    text-align: center;
-    width: 10%;
-}
-.title > * {
-    text-align: center;
-    position: relative;
-    top: 50%;
-    margin: auto;
-}
-.movie { 
-    margin:auto;
-    margin-top: 20px;
-    width: 80%;
-    text-align: center;
-}
-.card-container {
-    margin: auto;
-    width: 80%;
-}
-.card {
-    text-align: left;
-    overflow: hidden;
-    display: inline-block;
-    width: 40vw;
-    height: 360px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 20px;
-    line-height: 20px;
-    background-color: var(--red-2);
-    color: white;
-    border-radius: 10px;
-    border-bottom: 5px solid var(--yellow-1);
-}
-.movie-card {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    column-gap: 20px;
-    margin: auto;
-}
-.movie-card img {
-    height: 100%;
-    width: 40%;
-    margin: auto;
+nav {
+    background-color: var(--brown-2);
+    height: 8vh;
 }
 
-.content {
-    display: inline-block;
+.nav-container {
+    height: fit-content;
     width: 70%;
     margin: auto;
-    margin-right: 10px;
+    display: flex;
+}
+.nav-container a {
+    margin: auto;
+} 
+.nav-container img {
+    height: 5.5vh;
+    margin-top: 5px;
+}
+.nav-container img:hover {
+    opacity: .9;
+}
+.search-bar { 
+    margin: auto;
+    width: 50%;
+    height: 1vh;
+    border-radius: 5px;
+    background-color: var(--brown-1);
+    border: none;
+    color: white;
+    padding: 10px;
+}
+.search-bar::placeholder {
+    opacity: .8;
+    color: white;
+}
+.nav-list {
+    float: right;
+}
+.nav-list li {
+    display: inline-block;
+    margin-right: 40px;
+    font-weight: 600;
+}
+.nav-list a{
+    display: inline-block;
+    color: white;
+    text-decoration: none;
+}
+.nav-list a:hover { 
+    color: var(--yellow-3);
+}
+.content { 
+    width: 70vw;
+    height: fit-content;
+    margin: auto;
+}
+.header {
+    display: inline-block;
+    width: 100%;
+    height: fit-content;
+    margin-top: 35px;
+}
+.brown-vertical-line {
+    height: 22px;
+    width: 5px;
+    background-color: var(--brown-1);
+    display: inline-block;
+    margin-right: 5px;
+}
+.header h1 { 
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    font-size: 25px;
+    display: inline-block;
+}
+.toggle {
+    float: right;
+}
+.toggle button {
+    padding: 8px 8px 4px 8px;
+    margin-left: -5px;
+    border: 0.5px darkgrey solid;
+}
+.toggle i {
+    color: black;
+    font-size: 15px;
+    margin: auto;
+}
+.current-toggle {
+    background-color: grey;
+}
+.current-toggle i {
+    color: white;
+}
+.toggle button:hover {
+    background-color: grey;
+}
+.toggle button:hover i {
+    color: white;
+}
+
+.movie-container {
+    width: 100%;
+    margin: auto;
+    margin-top: 20px;
+}
+/* Card */
+.card {
+    margin: 0;
+    padding-left: 0;
+    margin-left: 20px;
+    margin-top: 20px;
+    width: 10vw;
+    height: 50vh;
+    float: left;
+}
+.poster { 
+    width: 10vw;
+    height: auto;
+    border-radius: 5px;
+}
+.rating {
+    margin-left: 5px;
+    margin-top: 5px;
+    display: flex;
+    column-gap: 10px;
 }
 .rating p {
-    font-weight: 700;
-    color: var(--yellow-2);
+    width: 100%;
+    margin: auto;
+    font-weight: 600;
+    font-size: 12px;
 }
-.movie-detail {
-    text-decoration: none;
-    color: white;
-    width: 10%;
-    height: 10px;
-    background-color: var(--orange-1);
+.rating img {
+    width: 15px;
+    margin: auto;
+}
+.card h2 {
+    font-size: 18px;
+    margin-top: 2px;
+    margin-left: 5px;
+    font-weight: 500;
+}
+.card:hover {
+    color: var(--brown-1);
+}
+.card:hover .poster {
+    filter: brightness(90%);
+}
+
+/* List */
+.list {
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    column-gap: 30px;
+    line-height: 20px;
+    overflow: hidden;
+    margin-bottom: 30px;
+    margin-top: 40px;
+}
+.poster-list {
+    height: 30vh;
+    border-radius: 10px;
+}
+.list-right h2 {
+    font-size: 20px;
+}
+.list-right h3 {
     font-size: 15px;
-    padding: 8px 10px 8px 10px;
-    border-radius: 5%;
 }
-.movie-desc {
-    height: 100px;
+.list-right p{
+    height: 30%;
     overflow: hidden;
 }
-.movie-title {
-    height: 60px;
-    overflow: hidden;
+.list:hover {
+    color: var(--brown-1);
 }
+.list:hover .poster-list {
+    filter: brightness(90%);
+}
+
 
 footer {
+    text-align: center;
     padding: 30px;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 15px;
-}
-
-.red {
-    color: red;
-}
-.yellow {
-    color: yellow;
-}
-.green {
-    color: greenyellow;
 }
