--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ nav {
 }
 .search-bar { 
     margin: auto;
+    margin-right: -20px;
     width: 50%;
     height: 1vh;
     border-radius: 5px;
@@ -50,6 +51,23 @@ nav {
 .search-bar::placeholder {
     opacity: .8;
     color: white;
+}
+.search_button {
+    height: 3.5vh;
+    margin: auto;
+    border-radius: 5px;
+    padding: 2px 10px 2px 10px;
+    background-color: var(--brown-1);
+    border: none;
+}
+.search_button i {
+    margin: auto;
+    color: white;
+    font-size: 10px;
+}
+.search_button:hover {
+    cursor: pointer;
+    opacity: .8;
 }
 .nav-list {
     float: right;
