--- a/style.css
+++ b/style.css
@@ -33,14 +33,19 @@ nav {
 .nav-container img {
     height: 5.5vh;
     margin-top: 5px;
+    margin-right: 20px;
 }
 .nav-container img:hover {
     opacity: .9;
 }
-.search-bar { 
-    margin: auto;
-    margin-right: -20px;
+.search_component {
     width: 50%;
+    height: 30%;
+    margin: auto;
+    text-align: center;
+}
+.search-bar { 
+    width: 80%;
     height: 1vh;
     border-radius: 5px;
     background-color: var(--brown-1);
@@ -53,15 +58,15 @@ nav {
     color: white;
 }
 .search_button {
-    height: 3.5vh;
+    height: 3.7vh;
+    padding-left: 10px;
+    padding-right: 10px;
     margin: auto;
     border-radius: 5px;
-    padding: 2px 10px 2px 10px;
     background-color: var(--brown-1);
     border: none;
 }
 .search_button i {
-    margin: auto;
     color: white;
     font-size: 10px;
 }
@@ -74,7 +79,7 @@ nav {
 }
 .nav-list li {
     display: inline-block;
-    margin-right: 40px;
+    margin-right: 20px;
     font-weight: 600;
 }
 .nav-list a{
@@ -131,6 +136,7 @@ nav {
 }
 .toggle button:hover {
     background-color: grey;
+    cursor: pointer;
 }
 .toggle button:hover i {
     color: white;
@@ -180,6 +186,7 @@ nav {
 }
 .card:hover {
     color: var(--brown-1);
+    cursor: pointer;
 }
 .card:hover .poster {
     filter: brightness(90%);
@@ -212,6 +219,7 @@ nav {
 }
 .list:hover {
     color: var(--brown-1);
+    cursor: pointer;
 }
 .list:hover .poster-list {
     filter: brightness(90%);
