--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ nav {
     cursor: pointer;
 }
 .card:hover .poster {
-    filter: brightness(90%);
+    opacity: .8;
 }
 #popup {
     display: none;
@@ -252,7 +252,7 @@ nav {
     cursor: pointer;
 }
 .list:hover .poster-list {
-    filter: brightness(90%);
+    opacity: .8;
 }
 
 @media only screen and (max-width: 1250px) {
